fix spacing issue on mobile

--- a/src/app/pages/blog/blog.scss
+++ b/src/app/pages/blog/blog.scss
@@ -6,7 +6,7 @@ $text-muted: #8892b0;
 .blog-page {
   max-width: 720px;
   margin: 0 auto;
-  padding: 4rem 2rem 3rem;
+  padding: 4rem 2rem 1.5rem;
 }
 
 .page-header {
